siosifm_dev_win32/examples/common/siosifmdll.h

typedef int int32;
typedef unsigned int uint32;
typedef unsigned long long int_p;
typedef int int32;
typedef unsigned int uint32;
typedef int int_p;
typedef int int32;
typedef unsigned int uint32;
typedef long int_p;
typedef int int_p;
// Function for Initialization and closing
/*
The function IfmDLLVersion returns the version number
*/
DLLFUNC int32 IfmDLLVersion();
/*
The function IfmDLLVersionString returns a pointer to
a char field with the dll name and version number
*/
DLLFUNC const char *IfmDLLVersionString();
DLLFUNC void IfmSetOption(int32 option, int32 param1);
/* Initializes the library

*/
DLLFUNC int32 IfmInit();
/* Closes the library and gives free all resources
   Counterpart to IfmInit
*/
DLLFUNC void IfmClose();
// don't use !!!
// only if IFM_OPTION_POLLSELF=0 then call IfmPoll frequently
DLLFUNC int32 IfmPoll();
/* Open a device
   returns a handle for the device, the "devNumber"
*/
DLLFUNC int32 IfmOpenUSB(int32 uniqueId);
// sets the baud rate for the following IfmSetOpenCOM functions
// the boud rate of the RE-10 RS-232 is default 115kBaud but can be
// configured induvidually, the boud rate given with this function must
// meet the configured rate in the device
// baudRate=0 resets to the default value
DLLFUNC int32 IfmSetBaudrate(int32 baudRate);
DLLFUNC int32 IfmOpenCOM(int32 comNumber);
DLLFUNC int32 IfmOpenCOM(const char *devName);
DLLFUNC int32 IfmOpenNetwork(const char *ipAddr, int32 port);
DLLFUNC int32 IfmOpenDemo(int32 channels);
/* Close a device which was opened with one of the IfmOpenXXX functions
*/
DLLFUNC void IfmCloseDevice(int32 devNumber);
/*
    The function IfmSearchUSBDevices finds the count of the devices on the USB-bus
    after a reset. This devices can be shown with the function IfmUSBDeviceSerial
*/
DLLFUNC int32 IfmSearchUSBDevices();
/*
 The function IfmUSBDeviceCount returns
 the count of devices on the USB-bus without a new search
*/
DLLFUNC int32 IfmUSBDeviceCount();
/*
  The function IfmUSBDeviceSerial returns the
 USB-serial number of the requested device; 0<=uniqueId<IfmUSBDeviceCount()
*/
DLLFUNC int32 IfmUSBDeviceSerial(int32 uniqueId);
// returns the type of the device, currently only RE10-cards are supported
DLLFUNC int32 IfmDeviceType(int32 devNumber);
// to which interface is the device connected ? RS232, USB od Network
DLLFUNC int32 IfmDeviceInterface(int32 devNumber);
// to ask for specific properties (defiened in siosifmdef.h)
DLLFUNC int32 IfmHasDeviceProperty(int32 devNumber, int32 porpertyNumber);
/*
IfmDeviceInfo returns required information, if it is available, otherwise it returns 0
Befor this function will be called, the device should be opened (IfmOpenCOM, IfmOpenUSB)
*/
DLLFUNC int_p IfmDeviceInfo(int32 devNumber, int32 requestedInfo);
/*
IfmSetTrigger is command for the settings of trigger conditions.
This settings have to be made before the command IfmSetMeasurement
For the meaning of flags see the file siosifmdef.h
*/
DLLFUNC int32 IfmSetTrigger(int32 devNumber, uint32 triggerMode);
/*
IfmSetFilter is command for the setting of the averaging filter one and two.
If the values avr1 or avr2 are equal 0, will be the corresponding filter deactivated.
Please note the settings of the mesurementFlags in the function IfmSetMeasurement.
For the settings of  filterFlags see siosifmdef.h
*/
DLLFUNC int32 IfmSetFilter(int32 devNumber, uint32 filterFlags,int32 avg1, int32 avg2);
/*
The function IfmSetMeasurementRawValues alike IfmSetMeasurement.
But the filter settings will be ignored here. It means the sampe frequency and the output word rate are equal
*/
//DLLFUNC int32 IfmSetMeasurementRawValues(int32 devNumber,unsigned int32 measurementFlags, int32 outputWordRate);

/*
The command IfmSetMeasurement is for the setting of measurement parameters like trigger conditions, filtering: on/off,
measuring value and output word rate.
For the settings of measurementFlags see siosifmdef.h
*/
DLLFUNC int32 IfmSetMeasurement(int32 devNumber,uint32 measurementFlags, double outputWordRate);
/*
The command IfmStart is for the measurement start.
The measurement starts with the actual measurement parameter.
See commands IfmSaveConfigDevice and IfmSetMeasurement for the detailed information.
*/
DLLFUNC int32 IfmStart(int32 devNumber);
DLLFUNC uint32 IfmStatus(int32 devNumber,int32 channel);
// detailierte Monitoring data in service Teil als struktur
DLLFUNC int32 IfmSignalQuality(int32 devNumber,int32 channel, int32 select);
// returns a description, from where the value is
DLLFUNC int32    IfmTemperatureFlags(int32 devNumber, int32 channel);
DLLFUNC int32    IfmHumidityFlags(int32 devNumber, int32 channel);
DLLFUNC int32    IfmAirPressureFlags(int32 devNumber, int32 channel);
DLLFUNC int32 IfmManualEnvironment(int32 devNumber, int32 channel);  //depricated; use IfmEnvironmentFlags
/*
  wie IfmI2CRequestWrite, blockiert aber so lange, bis Rï¿½ckmeldung von Firmware da oder Timeout
 */
DLLFUNC int32 IfmI2CWrite(int32 devNumber, int32 i2cAddr, int32 ramAddr, int32 count, unsigned char* buffer);
/*
  like IfmI2CRequestRead but is blocking until read was successfully or an error has reported
*/
DLLFUNC int32 IfmI2CRead(int32 devNumber, int32 i2cAddr, int32 ramAddr, int32 count);