siosifm_dev_win32/python/siosifm.py


#IfmDeviceInfo
#the following information can be requested with IfmDeviceInfo
IFM_DEVINFO_SRATE =             1       #current sampleRate (internal, before reduction by filters)
IFM_DEVINFO_OUTRATE =           2       #output word rate, like set by IfmSetMeasurement or saved in the flash
                                        #this is the real output wird rate, which may be differ from the selected due to steps in possible sample rate
IFM_DEVINFO_FILTERFLAGS =           3       #filter flags, like set by IfmSetFilter or saved in the flash
IFM_DEVINFO_MEASUREMENTFLAGS =      4       #mesurement flags, like set by IfmSetMeasurement or saved in the flash
IFM_DEVINFO_TRIGGERMODE =           5       #trigger mode, like set by IfmSetTrigger or or saved in the flash
IFM_DEVINFO_AVG1 =                  6       #filter option for the average 1, like set by IfmSetFilter or saved in the flash
IFM_DEVINFO_AVG2 =                  7       #filter option for the average 2, like set by IfmSetFilter or saved in the flash
IFM_DEVINFO_AVAILABLE =             8       #infos available, if not wait until the DLL has get it from the device
IFM_DEVINFO_SERIALNUMBER =          9       #return the (USB-) serial number of the card
IFM_DEVINFO_RESETSTATUS =           10      #resets the given bits in the device status
IFM_DEVINFO_READY =                 11      #ready for IfmStart
IFM_DEVINFO_VERSIONSTRING =         12      #Firmware-Version and compiling data
IFM_DEVINFO_FPGAVERSION =           13      #Version of the programmable hardware (FPGA)
IFM_DEVINFO_OUTRATE_POINTER =       14      #Pointer to a double value, containing the OWR in higher resolution
IFM_DEVINFO_LINKEDCHANNELS1 =       15      #wich channels are linked to calculate an angle
IFM_DEVINFO_LINKEDCHANNELS2 =       16      #there are two pairs of linked channels possible
IFM_DEVINFO_BASEDISTANCE1_POINTER = 17      #base distance of the linkes channels
IFM_DEVINFO_BASEDISTANCE2_POINTER = 18      #same for the second pair
IFM_DEVINFO_LAST_I2C_CARDADDR =     19      #card address of the active or last I2C request
IFM_DEVINFO_LAST_I2C_MEMADDR =      20      #memory address of the active or last I2C request
IFM_DEVINFO_SRATE_POINTER =         21      #pointer to the current sample rate (double value)
IFM_DEVINFO_PSD_COUNT =             22      #count of the available PSD-Sensors (lateral shift sensors)
IFM_DEVINFO_PSD_TYPE =              23      #type of PSD implementation, see below
IFM_DEVINFO_ELLFIT_STATUS =         24      #Heydemann-corr by Ellipse fitting: Status on or off
IFM_DEVINFO_ELLFIT_COSOFFS_POINTER =25      #Heydemann-corr by Ellipse fitting: pointer to double value of cosine offset
IFM_DEVINFO_ELLFIT_SINOFFS_POINTER =26      #Heydemann-corr by Ellipse fitting: pointer to double value of sine offset
IFM_DEVINFO_ELLFIT_PHI_POINTER =    27      #Heydemann-corr by Ellipse fitting: pointer to double value of phase angle
IFM_DEVINFO_ELLFIT_AR_POINTER =     28      #Heydemann-corr by Ellipse fitting: pointer to double value of amplitude ratio
IFM_DEVINFO_ELLFIT_AMPL_POINTER =   29      #Heydemann-corr by Ellipse fitting: pointer to double value of amplitude ratio
IFM_DEVINFO_ENVIRCOUNTER =          30      #counter of the environment measurement, use with sensor Number:
                                            #IFM_DEVINFO_ENVIRCOUNTER|(sensorNumber*256)
IFM_DEVINFO_DP10LSB =           31      #the parallel output of the DP-10 can be shifted , this request returns the shift value
                                        #the LSB of the DP-10 is wavelength/pow(2,17-IfmDeviceInfo(devNo,IFM_DEVINFO_DP10LSB))
                                        #the values may be different for each channel, request (channel*256)|IFM_DEVINFO_DP10LSB

IFM_DEVINFO_DEVICESERIALNUMBER_POINTER =    32      #return a pointer to a char[12] which contains the serial number of the electronic unit

IFM_DEVINFO_CMDDELAY =      100     #delay in ms between transmitted commands
IFM_DEVINFO_I2CTIMEOUT =    101     #timeout in ms for IfmI2CRead and IfmI2CWrite


#Type of PSD implementation, returned with IFM_DEVINFO_PSD_TYPE

IFM_PSDTYPE_NONE =  0       #no PSD available
IFM_PSDTYPE_CARD =  1       #PSD based on PSD-04 card, slow rate approx 1-4 samples per second
IFM_PSDTYPE_ADU =   2       #PSD based on special ADU card; fast data rate like interferometer values


#IfmHasDeviceProperty

IFM_PROPERTY_BLOCKMODE =    1
IFM_PROPERTY_PSD =          2



#types for IfmAuxValues

IFM_VALUETYPE_COS =         1
IFM_VALUETYPE_ADC1 =        1
IFM_VALUETYPE_SIN =         2
IFM_VALUETYPE_ADC2 =        2
IFM_VALUETYPE_NORM =        3
IFM_VALUETYPE_TESTPATTERN = 4
IFM_VALUETYPE_CLOCKCOUNT =  5
IFM_VALUETYPE_COUNTER =     5
IFM_VALUETYPE_SAMPLECOUNT = 6
IFM_VALUETYPE_PSD_X =       7       #lateral displacement via PSD in 10nm steps
IFM_VALUETYPE_PSD_Y =       8
IFM_VALUETYPE_PSDRAW_X =    9       #lateral displacement via PSD in 10nm steps
IFM_VALUETYPE_PSDRAW_Y =    10
IFM_VALUETYPE_PSD_SUM =     11      #energy on the PSD

#Parameter select for IfmSignalQuality(int devNumber,int channel, int select)
IFM_SIGNALQ_A1 =        0x10        #Amplitude of the signal 1
IFM_SIGNALQ_O1 =        0x20        #Offset of the signal 2
IFM_SIGNALQ_A2 =        0x40        #Amplitude of the signal 2
IFM_SIGNALQ_O2 =        0x80        #Offset of the signal 2
IFM_SIGNALQ_SUM =       0x100       #Overall quality from 0..100%
IFM_SIGNALQ_FREQ =      0x200       #Frequency of the reference mirror vibrator
IFM_SIGNALQ_STATE =     0x400       #Status of the signal control card; for internal use


#IfmManualEnvironment
IFM_ENVIR_MANUAL_T =    0x0002      #the temperatur was set manually
IFM_ENVIR_MANUAL_H =    0x0004      #the humidity was set manually
IFM_ENVIR_MANUAL_P =    0x0008      #the air pressure was set manually
IFM_ENVIR_MANUAL_WVP =  0x0010      #the water vapour pressure was set manually
IFM_ENVIR_MANUAL_CONV = 0x0020      #the conversion coefficient was set manually
#IFM_ENVIR_MANUAL_WL =  0x0040
IFM_ENVIR_MANUAL_VWL =  0x0080      #the vacuum wavelength of the laser was set manually



#IfmTemperatureFlags, IfmAirPressureFlags, IfmHumidityFlags
IFM_ENVIRFLAG_SENSORMASK =  0x00FF  #in these bits the sensor number is coded, where the value was measured
IFM_ENVIRFLAG_MEASURED =    0x0100  #the value was measured; otherwise it's a default value
IFM_ENVIRFLAG_CURRENT =     0x0200  #the value was measured with the last data set
                                        #(in a typical configuration it's not older than 4 secs)
IFM_ENVIRFLAG_MANUAL =      0x0400  #value was given manually per IfmSet... function


#Bits in the measurement data flags field; for internal use only
IFM_MFLAGS_RESERVED1 =  0x01
IFM_MFLAGS_BEAMBREAK =  0x02
IFM_MFLAGS_OVERFLOW =   0x04
IFM_MFLAGS_MISCOUNT =   0x80


#IfmStatus returns the following flags

#the lower 16 bit are channel dependend
IFM_STATUS_BEAMBREAK_QUADRANT = 0x0001      #miscount detected: the interferometer counter has detected an invalid jump over more than one quadrants
IFM_STATUS_BEAMBREAK_LEVEL =    0x0002      #the signal amplitude is lower than a given threashold so that miscounts are likely
IFM_STATUS_LASER_STABLE =       0x0010      #the laser(s) is(are) stable (only in systems with stabilized lasers)
IFM_STATUS_LASER_WAS_UNSTABLE = 0x0020      #since last IfmSetZero the laser was at least one time unstable

#the upper 16 bit are independend from the channel
IFM_STATUS_BUFFER_OVERFLOW_DEV =    0x0100  #the FIFO in the interferometer had an overflow; data loss by to large samplerate has occured
IFM_STATUS_BUFFER_OVERFLOW_DLL =    0x0200  #the measurement value buffer in the DLL had an overlow; data loss by infrequent call of IfmGetValue
IFM_STATUS_BLOCKMODE =              0x0400  #the device is in blockmode
IFM_STATUS_TRACER_LOCK =            0x0800  #Tracer locked
IFM_STATUS_BAD_REQUEST =            0x8000  #the status request could not be answered, perhaps due to bad deviceNumber or invalid channel


#Device types for IfmDeviceType
IFM_TYPE_NONE = 0
IFM_TYPE_DEMO = 1
IFM_TYPE_RE10 = 2   #the usual type, siosifm.dll is made to support RE-10 card
IFM_TYPE_RE06 = 3
IFM_TYPE_RAW =  4   #internal type, provides raw packet communication

#Interfaces for IfmDeviceInterface
IFM_INTERFACE_NONE =    0
IFM_INTERFACE_DEMO =    1
IFM_INTERFACE_RS232 =   2
IFM_INTERFACE_USB =     3
IFM_INTERFACE_NET =     4


#Error codes
IFM_ERROR_NONE =                    0
IFM_ERROR_DEVICE_INVALID =          -1
IFM_ERROR_BAD_CHANNEL =             -2
IFM_ERROR_BAD_DEVICETYPE =          -3
IFM_ERROR_DATALEN =                 -4
IFM_ERROR_BAD_DEVICE =              IFM_ERROR_DEVICE_INVALID
IFM_ERROR_UNKNOWN =                 -6
IFM_ERROR_DEVICECOUNT_OVERFLOW =    -10
IFM_ERROR_BAD_REQUESTTYPE =         -11
IFM_ERROR_INVALID_USB_ID =          -12
IFM_ERROR_CREATE_HANDLE =           -13
IFM_ERROR_NOT_IMPLEMENTED =         -100
IFM_ERROR_I2C_INUSE =               -15
IFM_ERROR_I2C_WRITE =               -16
IFM_ERROR_I2C_TIMEOUT =             -17
IFM_ERROR_OWR_TOOHIGHT =            -18
IFM_ERROR_INFO_NOT_AVAILABLE =      -19
IFM_ERROR_BAD_SENSOR =              -20
IFM_ERROR_I2C_READ =                -21
IFM_ERROR_BAD_PARAMETER =           -22
IFM_ERROR_SPI_ANSWER =              -23


#---------------------------------------------------------------------------------------------------------------------------------------------------------
#=========================================================================================================================================================
#---------------------------------------------------------------------------------------------------------------------------------------------------------


#Function for Initialization and closing
#The function IfmDLLVersion returns the version number

IfmDLLVersion = ifmdll.IfmDLLVersion
IfmDLLVersion.restype = c_int


#The function IfmDLLVersionString returns a pointer to
#a char field with the dll name and version number

IfmDLLVersionString = ifmdll.IfmDLLVersionString
IfmDLLVersionString.restype = c_char_p


IfmSetOption = ifmdll.IfmSetOption
IfmSetOption.argtypes = [c_int, c_int]


#Initializes the library

IfmInit = ifmdll.IfmInit
IfmInit.restype = c_int


#Closes the library and gives free all resources
#Counterpart to IfmInit

IfmClose = ifmdll.IfmClose


#don't use !!!
#only if IFM_OPTION_POLLSELF=0 then call IfmPoll frequently

IfmPoll = ifmdll.IfmPoll
IfmPoll.restype = c_int


#Open a device
#returns a handle for the device, the "devNumber"

IfmOpenUSB = ifmdll.IfmOpenUSB
IfmOpenUSB.argtypes = [c_int]
IfmOpenUSB.restype = c_int


#sets the baud rate for the following IfmSetOpenCOM functions
#the boud rate of the RE-10 RS-232 is default 115kBaud but can be
#configured induvidually, the boud rate given with this function must
#meet the configured rate in the device
#baudRate=0 resets to the default value

IfmSetBaudrate = ifmdll.IfmSetBaudrate
IfmSetBaudrate.argtypes = [c_int]
IfmSetBaudrate.restype = c_int


#only for WIN32/64

IfmOpenCOM = ifmdll.IfmOpenCOM
IfmOpenCOM.argtypes = [c_int]
IfmOpenCOM.restype = c_int


IfmOpenNetwork = ifmdll.IfmOpenNetwork
IfmOpenNetwork.argtypes = [c_char_p]
IfmOpenNetwork.restype = c_int

IfmOpenDemo = ifmdll.IfmOpenDemo
IfmOpenDemo.argtypes = [c_int]
IfmOpenDemo.restype = c_int


#Close a device which was opened with one of the IfmOpenXXX functions

IfmCloseDevice = ifmdll.IfmCloseDevice
IfmCloseDevice.argtypes = [c_int]


#The function IfmSearchUSBDevices finds the count of the devices on the USB-bus
#after a reset. This devices can be shown with the function IfmUSBDeviceSerial

IfmSearchUSBDevices = ifmdll.IfmSearchUSBDevices
IfmSearchUSBDevices.restype = c_int


#The function IfmUSBDeviceCount returns
#the count of devices on the USB-bus without a new search

IfmSearchUSBDevices = ifmdll.IfmSearchUSBDevices
IfmSearchUSBDevices.restype = c_int

